fixed margin issue on characterlist page and attempted to add in horizontal collapse in the navbar

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -58,6 +58,10 @@
 .navbar-collapse{
   border-top:0px;
 }
+// 
+// .horizontal-collapse{
+//   height: 100px;
+// }
 
 .navbar-default .navbar-brand{
   color: @color-title;
@@ -104,6 +108,11 @@ input.form-control {
 .editContainer {
   display: flex;
   justify-content: space-between;;
+}
+
+.editSettings{
+  border: none;
+  background: transparent;
 }
 
 .btn-primary {
