--- a/client/app/charlist/charlist.less
+++ b/client/app/charlist/charlist.less
@@ -19,6 +19,8 @@
 .row {
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .full-width {
@@ -59,5 +61,5 @@
 }
 
 .char-table {
-  margin: 0 15px;
+  margin: 0px;
 }
